--- a/index.html
+++ b/index.html
@@ -5,22 +5,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   </head>
   <body ng-app="ticTacToe" ng-controller="Ctrl">
-    <h3>Player 1 - {{player1}} vs. Player 2 - {{player2}}
+    <h3>Player 1 - {{player1}} vs. Player 2 - {{player2}}</h3>
+    <h4>{{move}} turn to make a move </h4>
     <table>
-      <tr>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-      </tr>
-      <tr>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-      </tr>
-      <tr>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+      <tr ng-repeat="row in board track by $index">
+        <td ng-repeat="cell in row track by $index" ng-click="makeMove(move, $index, row)">{{cell}}</td>
       </tr>
     </table>
     <script src="index.js"></script>
