automatically start new game, as nex moveafter a win, +borders

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body ng-app="ticTacToe" ng-controller="Ctrl">
     <h3>Player 1 - {{player1}} vs. Player 2 - {{player2}}</h3>
     <h4>{{move}} turn to make a move </h4> 
-    <table>
-      <tr ng-repeat="row in board track by $index">
-        <td ng-repeat="cell in row track by $index" ng-click="makeMove(move, $index, row)">{{cell}}</td>
+    <table border="solid" >
+      <tr height="30px" ng-repeat="row in board track by $index">
+        <td width="30px"  ng-repeat="cell in row track by $index" ng-click="makeMove(move, $index, row)">{{cell}}</td>
       </tr>
     </table>
     <p>{{error}}</p>
